--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push":"drizzle-kit push",
+    "db-studio":"drizzle-kit studio",
+    "db:generate":"drizzle-kit generate"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
@@ -14,10 +17,8 @@
     "drizzle-orm": "^0.44.4",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "db:push":"drizzle-kit push",
-    "db-studio":"drizzle-kit studio",
-    "db:generate":"drizzle-kit generate"
+    "react-dom": "19.1.0"
+    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
