--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:push":"drizzle-kit push",
-    "db-studio":"drizzle-kit studio",
-    "db:generate":"drizzle-kit generate",
-     "db:migrate":"tsx./lib/db/migrate.ts"
-
+    "db:push": "drizzle-kit push",
+    "db-studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx ./lib/db/migrate.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
@@ -19,8 +18,8 @@
     "drizzle-orm": "^0.44.4",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
-    
+    "react-dom": "19.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
